--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="#" onclick="clearToken()">🗝 清除 Token</a>
   </div>
 
-  <h1>上傳圖片至 GitHub 圖床</h1>
+  <h1>上傳圖片</h1>
 
   <div id="tokenInputArea" style="display:none;">
     <label>請輸入 GitHub Token（只會儲存在本機瀏覽器）</label>
