--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <a href="#" onclick="clearToken()">🗝 清除 Token</a>
   </div>
 
-  <h1>上傳圖片v3</h1>
-
+  <h1>上傳圖片v0</h1>
+  <p><a href="gallery.html">👉 查看圖片總覽</a></p>
   <div id="tokenInputArea" style="display:none;">
     <label>請輸入 GitHub Token（只會儲存在本機瀏覽器）</label>
     <input type="password" id="tokenInput" />
