--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,7 @@
   </style>
 </head>
 <body>
+  <p><a href="index.html">⬅ 返回上傳頁面</a></p>
   <h1>las_img 圖片總覽</h1>
   <input type="search" id="search" placeholder="搜尋圖片名稱..." oninput="filterImages()" />
   <div id="gallery" class="gallery"></div>
